[tool.poetry]
name = "cv-test"
version = "0.1.0"
description = ""
authors = ["Nikolay Zmitrovich <zanzifm@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.82"
torch = "^2.3.1"
torchvision = "^0.18.1"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
