[tool.poetry]
name = "cv-test"
version = "0.1.0"
description = ""
authors = ["Nikolay Zmitrovich <zanzifm@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.82"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
torch = {version = "^2.3.1+cu118", source = "torch_cuda"}
torchvision = {version = "^0.18.1+cu118", source = "torch_cuda"}
gradio = "^4.36.1"
numpy = "^1.26.4"


[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
