[tool.poetry]
name = "cv-test"
version = "0.1.0"
description = ""
authors = ["Nikolay Zmitrovich <zanzifm@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "4.9.0.80"
gradio = "4.25.0"
torch = "2.2.1"
torchvision = "0.17.1"


[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/nightly/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
